# kimimaro

./: .gitignore  .travis.yml  AUTHORS  CITATION.cff  ChangeLog  Dockerfile  MANIFEST.in  README.md  appveyor.yml  automated_test.py  benchmark.py  build_linux.sh  manylinux2010.Dockerfile  manylinux2014.Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: build_wheel.yml  test.yml
benchmarks/: README.md  benchmark.py  kimimaro.numbers
ext/skeletontricks/: dijkstra_invalidation.hpp  skeletontricks.cpp  skeletontricks.hpp  skeletontricks.pyx  test.cpp
kimimaro/: __init__.py  intake.py  post.py  postprocess.py  sharedmemory.py  trace.py  utility.py
kimimaro_cli/: __init__.py  codecs.py
manual_testing/: manual_test.py
