[build-system]
requires = [
    "setuptools>=61.0.0",
    "wheel",
    "cython",
    "numpy>=1.16.1"
]
build-backend = "setuptools.build_meta"

[project]
name = "kimimaro"
version = "5.8.3"
authors = [
    {name = "William Silversmith", email = "ws9@princeton.edu"},
    {name = "Alex Bae"},
    {name = "Forrest Collman"},
    {name = "Peter Li"},
    {name = "Nina Shamsi"}
]
description = "Skeletonize densely labeled image volumes."
readme = "README.md"
requires-python = ">=3.9.0,<4.0.0"
license = "GPL-3.0-or-later"
keywords = [
    "volumetric-data",
    "numpy",
    "teasar",
    "skeletonization",
    "centerline",
    "medial-axis-transform",
    "centerline-extraction",
    "computer-vision-algorithms",
    "connectomics",
    "image-processing",
    "biomedical-image-processing",
    "voxel"
]
classifiers = [
    "Intended Audience :: Developers",
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
    "Intended Audience :: Science/Research",
    "Operating System :: POSIX",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows :: Windows 10"
]

dependencies = [
    "click",
    "connected-components-3d>=3.16.0",
    "crackle-codec",
    "dijkstra3d>=1.15.0",
    "fill-voids>=2.0.0",
    "edt>=3.0.0",
    "fastremap>=1.10.2",
    "networkx",
    "numpy>=1.16.1",
    "osteoid",
    "pathos",
    "pytest",
    "scipy>=1.1.0",
    "tqdm",
    "xs3d>=1.2.0,<2",
    "posix_ipc>=1.0.4; sys_platform != 'win32'",
    "psutil>=5.4.3; sys_platform != 'win32'",
]

[project.optional-dependencies]
accel = [
    "pykdtree",
]
view = [ 
    "microviewer",
    "crackle-codec",
    "vtk",
]
tif = [ 
    "tifffile",
]
nii = [
    "nibabel",
]
nrrd = [
    "pynrrd",
]
all_formats = [
    "crackle-codec",
    "tifffile",
    "nibabel",
    "pynrrd",
]
all = [ 
    "tifffile",
    "nibabel",
    "pynrrd",
    "microviewer",
    "vtk",
    "pykdtree",
]

[project.urls]
Homepage = "https://github.com/seung-lab/kimimaro/"

[project.scripts]
kimimaro = "kimimaro_cli:main"

[tool.setuptools]
packages = ["kimimaro", "kimimaro_cli"]
include-package-data = true

[tool.setuptools.package-dir]
kimimaro = "kimimaro"
kimimaro_cli = "kimimaro_cli"

