[metadata]
name = kimimaro
url = https://github.com/seung-lab/kimimaro/
summary = Skeletonize densely labeled image volumes.
description-content-type = text/markdown
description-file = README.md
author = William Silversmith, Alex Bae, Forrest Collman
author-email = ws9@princeton.edu
home-page = https://github.com/seung-lab/kimimaro/
license = GPLv3+
classifier =
    Intended Audience :: Developers
    Development Status :: 4 - Beta
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Scientific/Engineering
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages = kimimaro

[wheel]
universal = 0